--- a/rtklib-sys/Cargo.toml
+++ b/rtklib-sys/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rtklib-sys"
 version = "0.1.1"
 rust-version = "1.82.0"
+edition = "2018"
 authors = ["Kevin Webb"]
 license = "MIT"
 description = "Native bindings to RTKLIB"
